# lokit

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: numba_tmx_conversion.py
code_examples/: aws_postgres_ingestion.py
code_examples/async/Lokit/: to_json_async.py
code_examples/async/database/: connect.py  load.py  match.py  match_batch.py  setup.py  to_document.py  unit.py
code_examples/async/office/: export_docx_async.py  export_pptx_async.py  import_docx_async.py  import_pptx_async.py
code_examples/async/parse/: csv.py  docx.py  file.py  html.py  idml.py  json_i18n.py  po.py  pptx.py  tmx.py  xliff.py  xlsx.py
code_examples/async/parse/write/: csv.py  docx.py  html.py  idml.py  json.py  json_i18n.py  po.py  pptx.py  xliff.py  xlsx.py
code_examples/async/quick_parse/: tmx_to_json.py  xliff_from_json.py
code_examples/async/stream/: docx.py  json.py  pptx.py  tmx.py  tmx_batches.py  xliff.py
code_examples/sync/Lokit/: all.py  filter.py  from_document.py  fuzzy_find.py  ids.py  match.py  next.py  output.py  parse.py  parse_bytes.py  plurals.py  previous.py  target.py  targets.py  to_json.py  unit.py  where.py
code_examples/sync/database/: connect_sync.py  load_sync.py  match_batch_sync.py  match_sync.py  setup_sync.py  to_document_sync.py  unit_sync.py
code_examples/sync/io/: load_lokit_json.py  load_lokit_json_bytes.py
code_examples/sync/office/: export_docx.py  export_pptx.py  import_docx.py  import_pptx.py  stream_docx.py  stream_pptx.py
code_examples/sync/parse/: csv.py  csv_targets.py  docx.py  file.py  html.py  idml.py  json_i18n.py  po.py  po_targets.py  pptx.py  tmx.py  tmx_parallel.py  xliff.py  xlsx.py  xlsx_targets.py
code_examples/sync/parse/write/: csv.py  docx.py  html.py  idml.py  json.py  json_i18n.py  po.py  pptx.py  tmx.py  xliff.py  xlsx.py
code_examples/sync/quick_parse/: csv_to_xliff.py  tmx_from_json.py  tmx_to_csv.py  tmx_to_json.py  tmx_to_tmx.py  tmx_to_xliff.py  xliff_from_json.py  xlsx_to_xliff.py
code_examples/sync/stream/: docx.py  json.py  pptx.py  tmx.py  tmx_parallel.py  xliff.py
native/interchange/: Cargo.toml
native/interchange/src/: lib.rs
parsers/to_lokit/: tmx.py  xliff.py
reports/: numba_performance_report_2026-06-05.md
src/lokit/: __init__.py  _accelerators.py  _api.py  _compiled_manifest.py  _interchange_rust.pyi  compat.py  format_detection.py  importers.py  logic.py  tabular.py
src/lokit/_data/: __init__.py  cldr_plural_rules.py
src/lokit/async_/: __init__.py  database.py
src/lokit/convert/: __init__.py
src/lokit/core/: logger.py
src/lokit/data/: lang_codes.py  structure.py  tag_types.py  targets.py
src/lokit/database/: __init__.py
src/lokit/db/: __init__.py  connection.py  matching.py  models.py  operations.py  queries.py  schema.py  serialization.py
src/lokit/documents/: __init__.py  models.py  protocols.py
src/lokit/documents/office/: __init__.py  backend.py  process.py  protocol.py  runtime.py
src/lokit/exporters/: __init__.py  csv.py  docx.py  html.py  idml.py  json_i18n.py  po.py  pptx.py  regen.py  tmx.py  xliff.py  xlsx.py
src/lokit/io/: __init__.py  atomic.py  json.py  stream_json.py
src/lokit/messages/: __init__.py  gettext_plural.py  message_format.py  plural_rules.py
src/lokit/office/: __init__.py  backend.py  errors.py  models.py  options.py  process.py  protocol.py  protocols.py  runtime.py
src/lokit/parse/: __init__.py  async_.py
src/lokit/parse/write/: __init__.py  async_.py  regen.py
src/lokit/parsers/: __init__.py  async_bridge.py  interchange.py  projection.py
src/lokit/parsers/csv/: extraction.py
src/lokit/parsers/html/: __init__.py  extraction.py
src/lokit/parsers/idml/: __init__.py  extraction.py
src/lokit/parsers/json_i18n/: __init__.py  extraction.py
src/lokit/parsers/po/: __init__.py  extraction.py  stream.py
src/lokit/parsers/tmx/: base.py  extraction.py  header.py  helpers.py  models.py  parallel.py  props.py  tags.py  xml_utils.py
src/lokit/parsers/xliff/: __init__.py  extraction.py  tags.py
src/lokit/parsers/xlsx/: extraction.py
src/lokit/quick_parse/: __init__.py  async_.py
src/lokit/stream/: __init__.py  async_.py
src/lokit/types/: __init__.py  content.py
src/lokit/write/: __init__.py
src/lokit_office_runtime/: __init__.py  runtime.json
src/lokit_office_runtime/licenses/: NOTICE.txt  __init__.py
src/office/: Directory.Build.props  Directory.Packages.props  Lokit.Office.sln
src/office/Lokit.Office.Core/: Lokit.Office.Core.csproj  OfficeException.cs  OfficeModels.cs  OfficeOptions.cs  packages.lock.json
src/office/Lokit.Office.Core/Extraction/: OfficeExtractor.cs
src/office/Lokit.Office.Core/Packaging/: OoxmlPackage.cs  PackagePreflight.cs
src/office/Lokit.Office.Core/Protocol/: ProtocolFrame.cs
src/office/Lokit.Office.Core/Reinsertion/: OfficeReinserter.cs
src/office/Lokit.Office.Tests/: Lokit.Office.Tests.csproj
src/office/Lokit.Office.Worker/: Lokit.Office.Worker.csproj  Program.cs  packages.lock.json
stubs/: python_calamine.pyi  rustpy_xlsxwriter.pyi
tests/: conftest.py  test_csv.py  test_db.py  test_docx_parser.py  test_html.py  test_idml.py  test_import_performance.py  test_inline_content.py  test_interchange_native.py  test_json_i18n.py  test_message_format.py  test_modular_api.py  test_office.py  test_performance_safety.py  test_po.py  test_pptx_parser.py  test_public_api.py  test_regen.py  test_tmx_multitarget.py  test_vendor_fixtures.py  test_xliff_multitarget.py  test_xlsx.py  test_xml_export_formatting.py
tests/fixtures/: vendor_manifest.json
tools/: generate_cldr_plurals.py  generate_mypyc_manifest.py  smoke_test_wheel.py  verify_mypyc_install.py  verify_native_install.py
