[project]
name = "lokit-python"
version = "0.1.3"
description = "A type-safe localization toolkit for parsing, converting, and matching TMX, XLIFF, PO, JSON, HTML, CSV, XLSX, and IDML files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.1",
    "openpyxl>=3.1.0",
    "polib>=1.2.0",
    "pyrefly>=1.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "mypy>=1.10.0", "lxml-stubs>=0.5.1", "types-openpyxl", "types-polib"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-openpyxl",
    "types-polib",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.15",
    "setuptools>=82.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lokit = ["py.typed"]

[tool.mypy]
mypy_path = "src"
strict = true
warn_unreachable = true
show_error_codes = true
