[project]
name = "lokit-python"
version = "0.1.4"
description = "A type-safe localization toolkit for parsing, converting, and matching TMX, XLIFF, PO, JSON, HTML, CSV, XLSX, and IDML files."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "localization",
    "l10n",
    "i18n",
    "translation",
    "translation-memory",
    "tmx",
    "xliff",
    "gettext",
    "po",
    "idml",
    "xlsx",
    "csv",
    "json",
    "html",
    "type-safe",
    "async",
    "streaming",
    "mypy",
    "mypyc",
    "backend-localization",
    "parsing",
    "parsers",
    "localization-parsers",
    "performative",
    "internationalization",
    "streaming",
    "backend",
    "memory-safe",

]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=6.1.1",
    "python-calamine>=0.6.2",
    "polib>=1.2.0",
    "rustpy-xlsxwriter>=0.4.4,<0.5",
]

[project.optional-dependencies]
accelerators = [
    "numba>=0.63",
]
perf = [
    "numba>=0.63",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/ciarandarby/lokit"
Repository = "https://github.com/ciarandarby/lokit"
Issues = "https://github.com/ciarandarby/lokit/issues"
Documentation = "https://github.com/ciarandarby/lokit#readme"

[build-system]
requires = ["setuptools>=82.0.1", "mypy>=1.10.0", "lxml-stubs>=0.5.1", "types-polib"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-polib",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.15",
    "setuptools>=82.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lokit = ["py.typed"]

[tool.mypy]
mypy_path = ["src", "stubs"]
strict = true
disallow_any_explicit = true
warn_unreachable = true
show_error_codes = true
