[project]
name = "lokit-python"
version = "0.3.2"
description = "Python localization toolkit for parsing, converting, and matching TMX, XLIFF, PO, JSON, HTML, CSV, XLSX, IDML, DOCX, and PPTX. Includes direct translation memory database ingestion."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "localization",
    "l10n",
    "i18n",
    "translation",
    "translation-memory",
    "translation-memory-database",
    "tmx",
    "tmx-parser",
    "xliff",
    "xliff-parser",
    "gettext",
    "po",
    "idml",
    "docx",
    "pptx",
    "xlsx",
    "csv",
    "json",
    "html",
    "type-safe",
    "async",
    "streaming",
    "mypy",
    "mypyc",
    "backend-localization",
    "parsing",
    "parsers",
    "localization-parsers",
    "performance",
    "internationalization",
    "backend",
    "memory-safe",
    "translate-toolkit-alternative",
    "postgresql-localization",
    "python-i18n-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=6.1.1",
    "psycopg[pool]>=3.2",
    "psycopg-binary>=3.2; platform_system != 'Windows'",
    "python-calamine>=0.6.2",
    "polib>=1.2.0",
    "rustpy-xlsxwriter>=0.4.4,<0.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
office = [
]
accelerators = [
    "numba>=0.63",
]
perf = [
    "numba>=0.63",
    "psutil>=5.9",
]
db = []
db-aws = [
    "boto3>=1.35",
]
db-gcp = [
    "cloud-sql-python-connector>=1.12",
]

[project.urls]
Homepage = "https://lokit.org"
Repository = "https://github.com/ciarandarby/lokit"
Issues = "https://github.com/ciarandarby/lokit/issues"
Documentation = "https://lokit.org"

[build-system]
requires = [
    "setuptools>=82.0.1",
    "mypy>=1.10.0",
    "lxml-stubs>=0.5.1",
    "psycopg>=3.2",
    "psycopg-pool>=3.2",
    "tqdm>=4.66",
    "types-polib",
    "types-setuptools",
    "types-tqdm",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-polib",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.15",
    "setuptools>=82.0.1",
    "psycopg>=3.2",
    "psycopg-pool>=3.2",
    "types-tqdm",
    "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lokit", "lokit.*", "lokit_office_runtime", "lokit_office_runtime.*"]
namespaces = false

[tool.setuptools.package-data]
lokit = ["py.typed"]
lokit_office_runtime = ["runtime.json", "licenses/*.txt", "bin/*"]

[tool.mypy]
mypy_path = ["src", "stubs"]
strict = true
disallow_any_explicit = true
warn_unreachable = true
show_error_codes = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"
