[package]
name = "lokit-interchange"
version = "0.4.0"
edition = "2021"
rust-version = "1.83"
publish = false

[lib]
name = "_interchange_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
quick-xml = { version = "0.41.0", features = ["encoding"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
